fix: It can listen doubleClickElement when the element is invisible

--- a/packages/core/examples/features/css/index.css
+++ b/packages/core/examples/features/css/index.css
@@ -61,6 +61,7 @@ html, body {
   line-height: 30px;
   color: #666;
   font-size: 14px;
+  user-select: none;
 }
 
 .elem-item:last-child {
